# cmake-examples

./: .clang-format  CMakeLists.txt  README.md  format_code.sh
.github/workflows/: code_style.yml  linux_build.yml  windows_build.yml
componentlibrary/: CMakeLists.txt  README.md
componentlibrary/cmake/: ComponentLibraryConfig.cmake.in  FetchGTest.txt
componentlibrary/modules/: CMakeLists.txt
componentlibrary/modules/other/: CMakeLists.txt
componentlibrary/modules/other/cmake/: OtherConfig.cmake.in
componentlibrary/modules/other/include/other/: other.hpp
componentlibrary/modules/other/src/: other.cpp
componentlibrary/modules/other/tests/: CMakeLists.txt
componentlibrary/modules/storyboard/: CMakeLists.txt
componentlibrary/modules/storyboard/cmake/: StoryBoardConfig.cmake.in
componentlibrary/modules/storyboard/include/storyboard/: storyboard.hpp
componentlibrary/modules/storyboard/src/: storyboard.cpp
componentlibrary/modules/storyboard/tests/: CMakeLists.txt
componentlibrary/modules/storyboard/tests/src/: testStoryboard_deleteNote.cpp  testStoryboard_searchByTag.cpp  testStoryboard_searchByText.cpp  testStoryboard_searchByTitle.cpp
executable/: CMakeLists.txt
executable/src/: main.cpp
executable_componentlibrary/: CMakeLists.txt  README.md
executable_componentlibrary/src/: main.cpp
executable_libstoryboard/: CMakeLists.txt  README.md
executable_libstoryboard/src/: main.cpp
libstoryboard/: CMakeLists.txt  README.md
libstoryboard/cmake/: LibStoryBoardConfig.cmake.in
libstoryboard/include/storyboard/: storyboard.hpp
libstoryboard/src/: storyboard.cpp
libstoryboard/tests/: CMakeLists.txt
libstoryboard/tests/src/: testStoryboard_deleteNote.cpp  testStoryboard_searchByTag.cpp  testStoryboard_searchByText.cpp  testStoryboard_searchByTitle.cpp
storyboard/: CMakeLists.txt
storyboard/src/: main.cpp
tests/: CMakeLists.txt
tests/src/: testStoryboard_deleteNote.cpp  testStoryboard_searchByTag.cpp  testStoryboard_searchByText.cpp  testStoryboard_searchByTitle.cpp
